syntax = "proto3";

package com.google.cloud.connector;

import "connector/v1alpha1/data_source.proto";

option java_package = "com.google.cloud.connector";
option java_multiple_files = true;
option java_outer_classname = "ConnectorProto";

// Information for a Java based connector.
message Connector {

  string className = 1;

  ConnectorConfig config = 2;

  .google.cloud.bigquery.federation.v1alpha1.DataSource dataSource = 3;
}

message ConnectorConfig {

  Type type = 1;

  string className = 2;

  enum Type {
    UNSPECIFIED = 0;
    MULTI_PARAMS = 1;
    CUSTOM_CLASS = 2;
  }
}